# e2e-agentic-workflow-profiler

./: CLAUDE.md  bootstrap.sh  main.py  pyproject.toml  system_samples.jsonl  trace.profiler.jsonl  v0-design.md
demos/: synthetic_run.py
demos/output/: context_overflow.jsonl  hallucinated_tool.jsonl  happy_path.jsonl  reasoning_heavy.jsonl  reasoning_loop.jsonl  slow_program.jsonl  transient_failure.jsonl  wrong_tool_retry.jsonl
docs/: v0-design.md
src/agent_profiler/: cli.py
src/agent_profiler/analyzer/: __init__.py  comparison.py  metrics.py  per_attempt.py  resource_analyzer.py
src/agent_profiler/collector/: __init__.py  openclaw_converter.py  system_sampler.py
src/agent_profiler/exporter/: __init__.py  perfetto.py
src/agent_profiler/schema/: __init__.py  events.py  trace.py
tests/: test_analyzer.py  test_cli.py  test_comparison.py  test_openclaw_converter.py  test_perfetto_export.py  test_resource_analyzer.py  test_schema.py  test_synthetic.py  test_system_sampler.py  test_token_tracking.py
tests/fixtures/: minimal_success.jsonl  openclaw_happy.jsonl  openclaw_retry.jsonl
